CMAKE_MINIMUM_REQUIRED(VERSION 3.26)
PROJECT(sw-rate-limiter-cmake)

SET(EXECUTABLE_NAME sw-rate-limiter)

ADD_EXECUTABLE(${EXECUTABLE_NAME}
  main.cpp
  rate_limiter.cpp
)

TARGET_INCLUDE_DIRECTORIES(${EXECUTABLE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(utils)

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} utils)

